--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,7 @@ body { color: #ffffff; font-family: Verdana; padding: 16px; line-height: 1.7em; 
 p {margin-bottom:2.5em;}
 
 
-a:link {color: #00bbff;background-color: transparent;text-decoration: underline;}
 
-a:visited {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-a:hover {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-a:active {color: #0055ff;background-color: transparent;text-decoration: underline;}
 
 @media screen and (min-width: 480px) {
 	h1 {
@@ -23,7 +17,10 @@ a:active {color: #0055ff;background-color: transparent;text-decoration: underlin
     p {
         font-size: 16px; line-height: 1.7em; 
     }
-}
+
+    a { font-size: 16px; line-height: 1.7em; color: #00bbff;background-color: transparent;text-decoration: underline;}
+
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 600px) {
@@ -34,6 +31,10 @@ a:active {color: #0055ff;background-color: transparent;text-decoration: underlin
     p {
         font-size: 20px; line-height: 1.7em; 
     }
+
+    a { font-size: 20px; line-height: 1.7em; color: #00bbff;background-color: transparent;text-decoration: underline;}
+
+
 }
 
 @media screen and (min-width: 601px) {
@@ -45,5 +46,9 @@ a:active {color: #0055ff;background-color: transparent;text-decoration: underlin
     {
         font-size: 24px; line-height: 1.7em; 
     }
+
+    a { font-size: 24px; line-height: 1.7em; color: #00bbff;background-color: transparent;text-decoration: underline;}
+
+
 }
 
