--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,14 @@
 
 body { color: #ffffff; font-family: Verdana; padding: 16px; line-height: 1.7em; background-color: black;}
 
-p {margin-bottom:2.5em;}
+p {margin-bottom:2em;}
 
 
 
 
 @media screen and (min-width: 480px) {
 	h1 {
-		font-size: 26px; line-height: 1.7em; 
+		font-size: 30px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; 
 	}
 
     p {
@@ -25,7 +25,7 @@ p {margin-bottom:2.5em;}
 
 @media screen and (min-width: 481px) and (max-width: 600px) {
 	h1 {
-		font-size: 30px; line-height: 1.7em; 
+		font-size: 40px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; 
 	}
 
     p {
@@ -39,7 +39,7 @@ p {margin-bottom:2.5em;}
 
 @media screen and (min-width: 601px) {
 	h1 {
-		font-size: 36px; line-height: 1.7em; 
+		font-size: 48px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; 
 	}
 
     p 
