--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ p {margin-bottom:2em;}
 
 @media screen and (min-width: 480px) {
 	h1 {
-		font-size: 36px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; 
+		font-size: 36px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; font-weight: bold;
 	}
 
     p {
@@ -25,7 +25,7 @@ p {margin-bottom:2em;}
 
 @media screen and (min-width: 481px) and (max-width: 600px) {
 	h1 {
-		font-size: 48px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; 
+		font-size: 48px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; font-weight: bold;
 	}
 
     p {
@@ -39,7 +39,7 @@ p {margin-bottom:2em;}
 
 @media screen and (min-width: 601px) {
 	h1 {
-		font-size: 60px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; 
+		font-size: 60px; font-family: 'Courier New', Courier, monospace;  line-height: 1.3em; font-weight: bold;
 	}
 
     p 
